// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should only render permalink panel when there are no other panels 1`] = `
<EuiContextMenu
  data-test-subj="shareContextMenu"
  initialPanelId={1}
  panels={
    Array [
      Object {
        "content": <UrlPanelContent
          getUnhashableStates={[Function]}
          objectType="dashboard"
        />,
        "id": 1,
        "title": "Permalink",
      },
    ]
  }
/>
`;

exports[`should render context menu panel when there are more than one panel 1`] = `
<EuiContextMenu
  data-test-subj="shareContextMenu"
  initialPanelId={3}
  panels={
    Array [
      Object {
        "content": <UrlPanelContent
          getUnhashableStates={[Function]}
          objectType="dashboard"
        />,
        "id": 1,
        "title": "Permalink",
      },
      Object {
        "content": <UrlPanelContent
          getUnhashableStates={[Function]}
          isEmbedded={true}
          objectType="dashboard"
        />,
        "id": 2,
        "title": "Embed Code",
      },
      Object {
        "id": 3,
        "items": Array [
          Object {
            "data-test-subj": "sharePanel-Embedcode",
            "icon": "console",
            "name": "Embed code",
            "panel": 2,
          },
          Object {
            "data-test-subj": "sharePanel-Permalinks",
            "icon": "link",
            "name": "Permalinks",
            "panel": 1,
          },
        ],
        "title": "Share this dashboard",
      },
    ]
  }
/>
`;
